# stm32-toolbox

./: .gitignore  AGENTS.md  README.md  pyproject.toml
boards/: nucleo_f091rc.json  nucleo_l552ze_q.json
docs/: TUTORIAL.md
packs/stm32f0/: pack.json
packs/stm32f0/templates/: CMakeLists.txt.j2  Makefile.j2  app_pins.c.j2  app_pins.h.j2  family_gpio.j2  hal.h.j2  hal_clock.h.j2  hal_delay.c.j2  hal_delay.h.j2  hal_gpio.c.j2  hal_gpio.h.j2  hal_uart.c.j2  linker.ld.j2  main_blinky.c.j2  startup_gcc.s  system.c.j2
packs/stm32l5/: pack.json
packs/stm32l5/openocd/: target.cfg
packs/stm32l5/templates/: CMakeLists.txt.j2  Makefile.j2  app_pins.c.j2  app_pins.h.j2  family_gpio.j2  hal_clock.c.j2  hal_delay.c.j2  hal_gpio.c.j2  hal_gpio.h.j2  hal_uart.c.j2  hal_uart.h.j2  main_blinky.c.j2  startup_gcc.s  system.c.j2
src/stm32_toolbox/: __init__.py  app.py  state.py
src/stm32_toolbox/core/: __init__.py  boards.py  builder.py  discover.py  errors.py  flasher.py  generator.py  packs.py  serialmon.py  toolchain.py  util.py
src/stm32_toolbox/ui/: board_select.py  code_editor.py  log_view.py  pin_config.py  project_wizard.py  serial_view.py  tool_status.py  widgets.py
tests/: test_discover.py  test_errors.py  test_generator.py  test_loaders.py
